# magician_ros2

./: DOCUMENTATION.md  LICENSE  README.md  dobot_control.bash  dobot_init.bash  dobot_start.bash  ros2humble.bash
dobot_bootup/: package.xml  setup.cfg  setup.py
dobot_demos/: setup.py
dobot_demos/dobot_demos/: homing_client.py  (+1 more)
dobot_driver/: package.xml
dobot_examples/: package.xml  setup.cfg  setup.py
dobot_menu/: package.xml  plugin.xml  setup.cfg  setup.py
dobot_msgs/: CMakeLists.txt  package.xml
dobot_nodes/: package.xml  setup.cfg  setup.py
dobot_nodes/config/: axis_limits.yaml
dobot_nodes/dobot_nodes/: CP_server.py  CP_server3.py  CP_server_func.py  PTP_server.py  _callback_action.py  _dobot_kinematics.py  _goal_callback_action.py  alarms_parser.py  arc_server.py  auto_leveling.py  collision_detection_server.py  dobot_state_publ.py  draw_circle_action.py  draw_circle_server.py  draw_polygon_server.py  homing_server.py  test.py  trajectory_validator_server.py  trajectory_validator_server_arc.py
dobot_nodes/launch/: alarms_analyzer.launch.py  auto_leveling.launch.py  dobot_Arc.launch.py  dobot_CP.launch.py  dobot_PTP.launch.py  dobot_homing.launch.py  dobot_rail.launch.py  dobot_validate_trajectory.launch.py  dobot_validate_trajectory_arc.launch.py  draw_circle.launch.py  draw_circle_action.launch.py  draw_polygon.launch.py
rqt_2D/: package.xml  plugin.xml  setup.cfg  setup.py
terminal/: dobot_bootup.bat  dobot_sim.bash  dobot_start.bash  install_dependencies.bash  reset_gnome_terminal.bash  ros2humble.bash  usb2WSL_dobot.bat  ws_magician.bash
(+27 files in other folders)
