<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dobot_nodes</name>
  <version>1.0.0</version>
  <description>ROS 2 nodes enabling Dobot Magician functionalities using ROS 2 topics, services, and actions.</description>
  <maintainer email="mathiaslyus@gmail.com">Mathias Lykholt - Ustrup</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <depend>dobot_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
